Move api, console and nginx into separate containers

--- a/docker/nginx/sites/flask_mpconsole.conf
+++ b/docker/nginx/sites/flask_mpconsole.conf
@@ -5,9 +5,6 @@ server {
 
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	access_log		/opt/MacPatch/Server/logs/nginx_console_access.log;
-	error_log		/opt/MacPatch/Server/logs/nginx_console_error.log;
-
 	return          301 https://$host$request_uri;
 }
 
@@ -18,12 +15,9 @@ server {
 
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	access_log	/opt/MacPatch/Server/logs/nginx_console_access_ssl.log;
-	error_log	/opt/MacPatch/Server/logs/nginx_console_error_ssl.log;
-
 	ssl on;
-	ssl_certificate 			/opt/MacPatch/Server/etc/ssl/server.crt;
-	ssl_certificate_key			/opt/MacPatch/Server/etc/ssl/server.key;
+	ssl_certificate 			/etc/ssl/server.crt;
+	ssl_certificate_key			/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
@@ -47,6 +41,6 @@ server {
 		proxy_redirect off;
 		proxy_buffering off;
 
-		proxy_pass http://127.0.0.1:3602;
+		proxy_pass http://console:3602;
 	}
 }
