--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,41 @@ services:
       MYSQL_DATABASE: "MacPatchDB3"
       MYSQL_USER: "dbadmin"
       MYSQL_PASSWORD: "dbadmin"
-  macpatch:
-    image: llnl/macpatch
+  nginx:
+    image: nginx
     restart: always
+    volumes:
+      - $PWD/docker/nginx/sites:/etc/nginx/sites
+      - $PWD/docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - $PWD/ssl/server.crt:/etc/ssl/server.crt
+      - $PWD/ssl/server.key:/etc/ssl/server.key
     ports:
       - "443:443"
       - "80:80"
       - "3600:3600"
+  console:
+    image: llnl/macpatch
+    restart: always
+    # ports:
+      # - "443:443"
+      # - "80:80"
+      # - "3600:3600"
     volumes:
-      - $PWD/ssl/server.crt:/opt/MacPatch/Server/etc/ssl/server.crt
-      - $PWD/ssl/server.key:/opt/MacPatch/Server/etc/ssl/server.key
+      # - $PWD/ssl/server.crt:/opt/MacPatch/Server/etc/ssl/server.crt
+      # - $PWD/ssl/server.key:/opt/MacPatch/Server/etc/ssl/server.key
       - $PWD/content:/opt/MacPatch/Content
-      - $PWD/docker/run.sh:/run.sh
+      - $PWD/docker/run-console.sh:/run.sh
       # - /path/to/myconfig//db-config.cfg:/opt/MacPatch/Server/apps/config.cfg
       # - /path/to/myconfig/siteconfig.json:/opt/MacPatch/Server/etc/siteconfig.json
+  api:
+    image: llnl/macpatch
+    restart: always
+    # ports:
+      # - "443:443"
+      # - "80:80"
+      # - "3600:3600"
+    volumes:
+      # - $PWD/ssl/server.crt:/opt/MacPatch/Server/etc/ssl/server.crt
+      # - $PWD/ssl/server.key:/opt/MacPatch/Server/etc/ssl/server.key
+      - $PWD/content:/opt/MacPatch/Content
+      - $PWD/docker/run-api.sh:/run.sh
