--- a/docker/nginx/sites-old/flask_mpapi.conf
+++ b/docker/nginx/sites-old/flask_mpapi.conf
@@ -5,9 +5,12 @@ server {
 
 	add_header X-Frame-Options "SAMEORIGIN";
 
+	access_log	/opt/MacPatch/Server/logs/nginx_ws_access.log;
+	error_log	/opt/MacPatch/Server/logs/nginx_ws_error.log;
+
 	ssl on;
-	ssl_certificate 			/etc/ssl/server.crt;
-	ssl_certificate_key			/etc/ssl/server.key;
+	ssl_certificate 			/opt/MacPatch/Server/etc/ssl/server.crt;
+	ssl_certificate_key			/opt/MacPatch/Server/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
@@ -31,6 +34,6 @@ server {
 		proxy_redirect off;
 		proxy_buffering off;
 
-		proxy_pass http://api:3601;
+		proxy_pass http://127.0.0.1:3601;
 	}
 }
