--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,47 +4,45 @@ services:
     image: "mysql:5.6"
     restart: always
     volumes:
-      - $PWD/dbstore:/var/lib/mysql
+      - ./dbstore:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: "my-secret-pw"
       MYSQL_DATABASE: "MacPatchDB3"
       MYSQL_USER: "dbadmin"
       MYSQL_PASSWORD: "dbadmin"
+    deploy:
+      replicas: 2
   nginx:
     image: nginx
     restart: always
     volumes:
-      - $PWD/docker/nginx/sites:/etc/nginx/sites
-      - $PWD/docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - $PWD/ssl/server.crt:/etc/ssl/server.crt
-      - $PWD/ssl/server.key:/etc/ssl/server.key
+      - ./docker/nginx/sites:/etc/nginx/sites
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./ssl/server.crt:/etc/ssl/server.crt
+      - ./ssl/server.key:/etc/ssl/server.key
     ports:
       - "443:443"
       - "80:80"
       - "3600:3600"
+    deploy:
+      replicas: 3
   console:
     image: llnl/macpatch
+    build: .
     restart: always
-    # ports:
-      # - "443:443"
-      # - "80:80"
-      # - "3600:3600"
+    command: ["console"]
     volumes:
-      # - $PWD/ssl/server.crt:/opt/MacPatch/Server/etc/ssl/server.crt
-      # - $PWD/ssl/server.key:/opt/MacPatch/Server/etc/ssl/server.key
-      - $PWD/content:/opt/MacPatch/Content
-      - $PWD/docker/run-console.sh:/run.sh
+      - ./content:/opt/MacPatch/Content
       # - /path/to/myconfig//db-config.cfg:/opt/MacPatch/Server/apps/config.cfg
       # - /path/to/myconfig/siteconfig.json:/opt/MacPatch/Server/etc/siteconfig.json
+    deploy:
+      replicas: 2
   api:
     image: llnl/macpatch
+    build: .
     restart: always
-    # ports:
-      # - "443:443"
-      # - "80:80"
-      # - "3600:3600"
+    command: ["api"]
     volumes:
-      # - $PWD/ssl/server.crt:/opt/MacPatch/Server/etc/ssl/server.crt
-      # - $PWD/ssl/server.key:/opt/MacPatch/Server/etc/ssl/server.key
-      - $PWD/content:/opt/MacPatch/Content
-      - $PWD/docker/run-api.sh:/run.sh
+      - ./content:/opt/MacPatch/Content
+    deploy:
+      replicas: 6
