--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,9 @@ services:
     command: ["console"]
     volumes:
       - ./content:/opt/MacPatch/Content
-      # - /path/to/myconfig/db-config.cfg:/opt/MacPatch/Server/apps/config.cfg
+      - ./Source/Server/apps:/opt/MacPatch/Server/apps
+      # - ./docker/run.sh:/run.sh
+      # - /path/to/myconfig/db-config.cfg:/opt/MacPatch/Server/etc/config.cfg
       # - /path/to/myconfig/siteconfig.json:/opt/MacPatch/Server/etc/siteconfig.json
   api:
     image: macpatch
