Add support for gunicorn address and port to be set in config.cfg

--- a/docker/config/config.cfg
+++ b/docker/config/config.cfg
@@ -7,3 +7,7 @@ DB_USER = 'dbadmin'
 DB_PASS = 'dbadmin'
 DB_USER_RO = 'mpdbro'
 DB_PASS_RO = 'mpdbro'
+
+GUNICORN_ADDRESS = '0.0.0.0'
+GUNICORN_CONSOLE_PORT = 3602
+GUNICORN_API_PORT = 3601
