--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./ssl/server.crt:/etc/ssl/server.crt
       - ./ssl/server.key:/etc/ssl/server.key
+      - ./content:/opt/MacPatch/Content
     ports:
       - "443:443"
       - "80:80"
