Use recommended ssl syntax

--- a/docker/nginx/sites/flask_mpapi.conf
+++ b/docker/nginx/sites/flask_mpapi.conf
@@ -1,11 +1,10 @@
 server {
 
-	listen 3600;
+	listen 3600 ssl;
 	server_name _;
 
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	ssl on;
 	ssl_certificate 			/etc/ssl/server.crt;
 	ssl_certificate_key			/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
