--- a/docker/nginx/sites/flask_mpconsole.conf
+++ b/docker/nginx/sites/flask_mpconsole.conf
@@ -10,12 +10,11 @@ server {
 
 server {
 
-	listen 443;
+	listen 443 ssl;
 	server_name _;
 
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	ssl on;
 	ssl_certificate 			/etc/ssl/server.crt;
 	ssl_certificate_key			/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
