--- a/Source/Server/conf/nginx/sites/flask_mpapi.conf
+++ b/Source/Server/conf/nginx/sites/flask_mpapi.conf
@@ -5,12 +5,12 @@ server {
 	
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	access_log	[SRVBASE]/logs/nginx_ws_access.log;
-	error_log	[SRVBASE]/logs/nginx_ws_error.log;
+	access_log	[SRVCONF]/logs/nginx_ws_access.log;
+	error_log	[SRVCONF]/logs/nginx_ws_error.log;
 
 	ssl on;
-	ssl_certificate 			[SRVBASE]/etc/ssl/server.crt;
-	ssl_certificate_key			[SRVBASE]/etc/ssl/server.key;
+	ssl_certificate 			[SRVCONF]/etc/ssl/server.crt;
+	ssl_certificate_key			[SRVCONF]/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
 	
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
