--- a/Source/Server/conf/nginx/sites/flask_mpconsole.conf
+++ b/Source/Server/conf/nginx/sites/flask_mpconsole.conf
@@ -5,8 +5,8 @@ server {
 
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	access_log		[SRVBASE]/logs/nginx_console_access.log;
-	error_log		[SRVBASE]/logs/nginx_console_error.log;
+	access_log		[SRVCONF]/logs/nginx_console_access.log;
+	error_log		[SRVCONF]/logs/nginx_console_error.log;
 
 	return          301 https://$host$request_uri;
 }
@@ -18,12 +18,12 @@ server {
 
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	access_log	[SRVBASE]/logs/nginx_console_access_ssl.log;
-	error_log	[SRVBASE]/logs/nginx_console_error_ssl.log;
+	access_log	[SRVCONF]/logs/nginx_console_access_ssl.log;
+	error_log	[SRVCONF]/logs/nginx_console_error_ssl.log;
 
 	ssl on;
-	ssl_certificate 			[SRVBASE]/etc/ssl/server.crt;
-	ssl_certificate_key			[SRVBASE]/etc/ssl/server.key;
+	ssl_certificate 			[SRVCONF]/etc/ssl/server.crt;
+	ssl_certificate_key			[SRVCONF]/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
