--- a/Source/Server/conf/nginx/sites/reposado_ssl.conf
+++ b/Source/Server/conf/nginx/sites/reposado_ssl.conf
@@ -71,5 +71,9 @@ server {
         if ( $http_user_agent ~ "Darwin/18" ){
           rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.14-10.13-10.12-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
         }
+        ## 10.15.x - Catalina
+        if ( $http_user_agent ~ "Darwin/18" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.15-10.14-10.13-10.12-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
     }
 }
