--- a/Source/MPAgentUploader/MPAgentUploader/Frameworks/Alamofire.framework/Versions/A/Resources/Info.plist
+++ b/Source/MPAgentUploader/MPAgentUploader/Frameworks/Alamofire.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18A389</string>
+	<string>19C46a</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.7.3</string>
+	<string>4.9.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -29,17 +29,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10A254a</string>
+	<string>11B53</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18A384</string>
+	<string>19B89</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1000</string>
+	<string>1120</string>
 	<key>DTXcodeBuild</key>
-	<string>10A254a</string>
+	<string>11B53</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.10</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
