--- a/Source/Server/conf/nginx/nginx.conf
+++ b/Source/Server/conf/nginx/nginx.conf
@@ -35,5 +35,5 @@ http {
     #send_timeout            10;
     
 
-    include [SRVBASE]/nginx/conf/sites/*.conf;
+    include [SRVBASE]/nginx/sites/*.conf;
 }
