--- a/Source/Server/conf/nginx/sites/reposado_ssl.conf
+++ b/Source/Server/conf/nginx/sites/reposado_ssl.conf
@@ -9,8 +9,8 @@ server {
 	error_log	[SRVBASE]/logs/reposado_error_ssl.log;
 
 	ssl on;
-	ssl_certificate 			[SRVBASE]/etc/ssl/server.crt;
-	ssl_certificate_key			[SRVBASE]/etc/ssl/server.key;
+    ssl_certificate             [SRVCONF]/etc/ssl/server.crt;
+    ssl_certificate_key         [SRVCONF]/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
 	
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
