--- a/Source/Server/conf/nginx/sites/flask_mpapi.conf
+++ b/Source/Server/conf/nginx/sites/flask_mpapi.conf
@@ -1,6 +1,6 @@
 server {
 
-	listen 3600;
+	listen 3600 ssl;
 	server_name _;
 	
 	add_header X-Frame-Options "SAMEORIGIN";
@@ -8,7 +8,6 @@ server {
 	access_log	[SRVCONF]/logs/nginx_ws_access.log;
 	error_log	[SRVCONF]/logs/nginx_ws_error.log;
 
-	ssl on;
 	ssl_certificate 			[SRVCONF]/etc/ssl/server.crt;
 	ssl_certificate_key			[SRVCONF]/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
