--- a/Source/Server/conf/nginx/sites/flask_mpconsole.conf
+++ b/Source/Server/conf/nginx/sites/flask_mpconsole.conf
@@ -13,7 +13,7 @@ server {
 
 server {
 
-	listen 443;
+	listen 443 ssl;
 	server_name _;
 
 	add_header X-Frame-Options "SAMEORIGIN";
@@ -21,7 +21,6 @@ server {
 	access_log	[SRVCONF]/logs/nginx_console_access_ssl.log;
 	error_log	[SRVCONF]/logs/nginx_console_error_ssl.log;
 
-	ssl on;
 	ssl_certificate 			[SRVCONF]/etc/ssl/server.crt;
 	ssl_certificate_key			[SRVCONF]/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
