--- a/Source/Server/conf/nginx/sites/reposado_ssl.conf
+++ b/Source/Server/conf/nginx/sites/reposado_ssl.conf
@@ -1,6 +1,6 @@
 server {
 
-	listen 443;
+	listen 443 ssl;
 	server_name _;
 	
 	add_header X-Frame-Options "SAMEORIGIN";
@@ -8,7 +8,6 @@ server {
 	access_log	[SRVBASE]/logs/reposado_access_ssl.log;
 	error_log	[SRVBASE]/logs/reposado_error_ssl.log;
 
-	ssl on;
     ssl_certificate             [SRVCONF]/etc/ssl/server.crt;
     ssl_certificate_key         [SRVCONF]/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
