--- a/docker/requirements-api.txt
+++ b/docker/requirements-api.txt
@@ -2,14 +2,14 @@ alembic==1.0.11
 aniso8601==7.0.0
 asn1crypto==0.24.0
 blinker==1.4
-boto3==1.9.195
-botocore==1.12.213
+boto3==1.10.31
+botocore==1.13.31
 cffi==1.12.3
 Click==7.0
-cryptography==2.7
+cryptography==2.8
 docutils==0.15.2
 Flask==1.1.1
-Flask-Caching==1.7.2
+Flask-Caching==1.8.0
 Flask-HTTPAuth==3.3.0
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
@@ -17,18 +17,19 @@ Flask-Migrate==2.5.2
 flask-profiler==1.8.1
 Flask-RESTful==0.3.7
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.4.0
+Flask-SQLAlchemy==2.4.1
 gevent==1.4.0
 greenlet==0.4.15
-gunicorn==19.9.0
+gunicorn==20.0.4
 healthcheck==1.3.3
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jmespath==0.9.4
-ldap3==2.6
+ldap3==2.6.1
 M2Crypto==0.35.2
 Mako==1.1.0
 MarkupSafe==1.1.1
+meinheld==1.0.1
 pyasn1==0.4.6
 pycparser==2.19
 PyMySQL==0.9.3
@@ -38,6 +39,6 @@ pytz==2019.2
 s3transfer==0.2.1
 simplejson==3.16.0
 six==1.12.0
-SQLAlchemy==1.3.6
+SQLAlchemy==1.3.11
 urllib3==1.25.3
 Werkzeug==0.15.5
