--- a/docker/requirements-console.txt
+++ b/docker/requirements-console.txt
@@ -3,18 +3,18 @@ aniso8601==7.0.0
 asn1crypto==0.24.0
 Babel==2.7.0
 blinker==1.4
-boto3==1.9.195
-botocore==1.12.213
+boto3==1.10.31
+botocore==1.13.31
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
-cryptography==2.7
+cryptography==2.8
 docutils==0.15.2
 Flask==1.1.1
 Flask-BabelEx==0.9.3
-Flask-Caching==1.7.2
-Flask-Cors==3.0.7
+Flask-Caching==1.8.0
+Flask-Cors==3.0.8
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.1
@@ -22,11 +22,11 @@ Flask-Principal==0.4.0
 Flask-RESTful==0.3.7
 Flask-Script==2.0.6
 Flask-Security==3.0.0
-Flask-SQLAlchemy==2.4.0
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 gevent==1.4.0
 greenlet==0.4.15
-gunicorn==19.9.0
+gunicorn==20.0.4
 humanize==0.5.1
 idna==2.8
 itsdangerous==1.1.0
@@ -36,6 +36,7 @@ ldap3==2.6
 M2Crypto==0.35.2
 Mako==1.1.0
 MarkupSafe==1.1.1
+meinheld==1.0.1
 mysql-connector-python==8.0.18
 passlib==1.7.1
 protobuf==3.10.0
@@ -49,7 +50,7 @@ requests==2.22.0
 s3transfer==0.2.1
 six==1.12.0
 speaklater==1.3
-SQLAlchemy==1.3.6
+SQLAlchemy==1.3.11
 urllib3==1.25.3
 Werkzeug==0.15.5
 WTForms==2.2.1
