--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     volumes:
       - ./docker/nginx/sites:/etc/nginx/sites
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl/server.crt:/etc/ssl/server.crt
-      - ./ssl/server.key:/etc/ssl/server.key
+      - ./docker/ssl/server.crt:/etc/ssl/server.crt
+      - ./docker/ssl/server.key:/etc/ssl/server.key
       - ./content:/opt/MacPatch/Content
     ports:
       - "443:443"
