Add Support for Update All feature. Also updated copyright and version info.

--- a/Source/MacPatch/MPAgent/MPAgent.xcodeproj/xcshareddata/xcschemes/MPAgent.xcscheme
+++ b/Source/MacPatch/MPAgent/MPAgent.xcodeproj/xcshareddata/xcschemes/MPAgent.xcscheme
@@ -61,7 +61,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-e"
+            argument = "-ec"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
