--- a/Source/MacPatch/MPAgent/MPAgent/MPAgent-Info.plist
+++ b/Source/MacPatch/MPAgent/MPAgent/MPAgent-Info.plist
@@ -7,17 +7,17 @@
 	<key>CFBundleName</key>
 	<string>MPAgent</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.2.0.1</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>3.2.0.1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>MPInfo</key>
-	<string>MacPatch 3.1.0 Client Software</string>
+	<string>MacPatch 3.3.4 Client Software</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 Lawrence Livremore National Laboratory. All rights reserved.</string>
+	<string>Copyright © 2020 Lawrence Livremore National Laboratory. All rights reserved.</string>
 </dict>
 </plist>
