--- a/Source/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
+++ b/Source/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.2.1</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -25,14 +25,14 @@
 	<key>LSUIElement</key>
 	<true/>
 	<key>MPInfo</key>
-	<string>MacPatch 3.3.0 Client Software</string>
+	<string>MacPatch 3.4.0 Client Software</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 Lawrence Livremore National Laboratory. All rights reserved.</string>
+	<string>Copyright © 2020 Lawrence Livremore National Laboratory. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>ClientStatusMainMenu</string>
 	<key>NSPrincipalClass</key>
