--- a/Source/MacPatch/gov.llnl.mp.helper/gov.llnl.mp.helper.xcodeproj/xcshareddata/xcschemes/gov.llnl.mp.helper.xcscheme
+++ b/Source/MacPatch/gov.llnl.mp.helper/gov.llnl.mp.helper.xcodeproj/xcshareddata/xcschemes/gov.llnl.mp.helper.xcscheme
@@ -32,8 +32,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       debugAsWhichUser = "root"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
