--- a/Source/Server/apps/mpconsole/package.json
+++ b/Source/Server/apps/mpconsole/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MacPatch",
-  "version": "3.1.2",
+  "version": "3.5.0",
   "description": "MacPatch",
   "author": "Charles Heizer",
   "license": "GPL-2.0-only",
@@ -14,10 +14,11 @@
 	"bootstrap-chosen": "1.4.2",
 	"bootstrap-editable": "1.0.1",
 	"bootstrap-table": "1.12.2",
+        "bootstrap-typeahead": "2.3.2",
 	"brace": "^0.11.1",
 	"chart.js": "^2.7.1",
-	"colresizable": "^1.6.0",
 	"chosen-js": "^1.8.7",
+	"colresizable": "^1.6.0",
 	"font-awesome": "^4.7.0",
 	"interactjs": "^1.2.9",
 	"jQuery-QueryBuilder": "^2.4.4",
