--- a/Source/Server/conf/nginx/sites/flask_mpapi.conf
+++ b/Source/Server/conf/nginx/sites/flask_mpapi.conf
@@ -1,34 +1,35 @@
 server {
 
-	listen 3600;
+	listen 3600 ssl http2;
 	server_name _;
 	
 	add_header X-Frame-Options "SAMEORIGIN";
 
 	access_log	[SRVBASE]/logs/nginx_ws_access.log;
 	error_log	[SRVBASE]/logs/nginx_ws_error.log;
+	keepalive_timeout 0;
 
-	ssl on;
 	ssl_certificate 			[SRVBASE]/etc/ssl/server.crt;
 	ssl_certificate_key			[SRVBASE]/etc/ssl/server.key;
-	ssl_prefer_server_ciphers   on;
-	
+	ssl_prefer_server_ciphers	on;
+	ssl_session_timeout			5m;
+
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS;
 
 	# Max 10gig upload
 	client_max_body_size 10G;
 
-    location / {
+	location / {
 		# checks for static files; if not found, proxy to app
 		try_files $uri @proxy_to_app;
 	}
 
 	location /mp-content {
-        alias [SRVCONTENT];
-    }
+		alias [SRVCONTENT];
+	}
 
-    location @proxy_to_app {
+	location @proxy_to_app {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $http_host;
 		proxy_redirect off;
