--- a/Source/Server/conf/nginx/sites/flask_mpconsole.conf
+++ b/Source/Server/conf/nginx/sites/flask_mpconsole.conf
@@ -13,7 +13,7 @@ server {
 
 server {
 
-	listen 443;
+	listen 443 ssl http2;
 	server_name _;
 
 	add_header X-Frame-Options "SAMEORIGIN";
@@ -21,10 +21,10 @@ server {
 	access_log	[SRVBASE]/logs/nginx_console_access_ssl.log;
 	error_log	[SRVBASE]/logs/nginx_console_error_ssl.log;
 
-	ssl on;
 	ssl_certificate 			[SRVBASE]/etc/ssl/server.crt;
 	ssl_certificate_key			[SRVBASE]/etc/ssl/server.key;
-	ssl_prefer_server_ciphers   on;
+	ssl_prefer_server_ciphers	on;
+	ssl_session_timeout			5m;
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS;
