Add Provisioning Features to MacPatch Fixed Bug with Mandatory software

--- a/Source/MacPatch/MPAgent/MPAgent.xcodeproj/xcshareddata/xcschemes/MPAgent.xcscheme
+++ b/Source/MacPatch/MPAgent/MPAgent.xcodeproj/xcshareddata/xcschemes/MPAgent.xcscheme
@@ -43,6 +43,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      debugAsWhichUser = "root"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -61,7 +62,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-eZ"
+            argument = "-eL"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
