Update Projects for Notarization Support

--- a/Source/MacPatch/MPUpdater/MPUpdater/Supporting_Files/MPUpdater-Info.plist
+++ b/Source/MacPatch/MPUpdater/MPUpdater/Supporting_Files/MPUpdater-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>gov.llnl.mp.updater</string>
 	<key>CFBundleName</key>
 	<string>MPUpdater</string>
 	<key>CFBundleShortVersionString</key>
