--- a/Source/MacPatch/MPAgent/MPAgent.xcodeproj/xcshareddata/xcschemes/MPAgent.xcscheme
+++ b/Source/MacPatch/MPAgent/MPAgent.xcodeproj/xcshareddata/xcschemes/MPAgent.xcscheme
@@ -62,7 +62,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-es"
+            argument = "-eE"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
