--- a/Source/MacPatch/MPAgent/MPAgent/MPAgent-Info.plist
+++ b/Source/MacPatch/MPAgent/MPAgent/MPAgent-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>gov.llnl.MPAgent</string>
 	<key>CFBundleName</key>
 	<string>MPAgent</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
+	<string>3.6.2</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>3.6.2.4</string>
 	<key>MPInfo</key>
-	<string>MacPatch 3.6.0 Client Software</string>
+	<string>MacPatch 3.6.2 Client Software</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 Lawrence Livremore National Laboratory. All rights reserved.</string>
+	<string>Copyright © 2022 Lawrence Livremore National Laboratory. All rights reserved.</string>
 </dict>
 </plist>
