--- a/Source/MacPatch/MPUpdater/MPUpdater/Supporting_Files/MPUpdater-Info.plist
+++ b/Source/MacPatch/MPUpdater/MPUpdater/Supporting_Files/MPUpdater-Info.plist
@@ -7,17 +7,17 @@
 	<key>CFBundleName</key>
 	<string>MPUpdater</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
+	<string>3.6.2</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>MPInfo</key>
-	<string>MacPatch 3.6.0 Client Software</string>
+	<string>MacPatch 3.6.2 Client Software</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 Lawrence Livremore National Laboratory. All rights reserved.</string>
+	<string>Copyright © 2022 Lawrence Livremore National Laboratory. All rights reserved.</string>
 </dict>
 </plist>
