Update to support Monterey 12.3

--- a/Source/MacPatch/MPAgent/MPAgent/MPAgent-Info.plist
+++ b/Source/MacPatch/MPAgent/MPAgent/MPAgent-Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleName</key>
 	<string>MPAgent</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.6.2</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>3.6.2.4</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>MPInfo</key>
-	<string>MacPatch 3.6.2 Client Software</string>
+	<string>MacPatch 3.6.4 Client Software</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
