--- a/Source/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
+++ b/Source/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.6.2</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -25,7 +25,7 @@
 	<key>LSUIElement</key>
 	<true/>
 	<key>MPInfo</key>
-	<string>MacPatch 3.6.2 Client Software</string>
+	<string>MacPatch 3.6.4 Client Software</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
