--- a/Source/Server/conf/nginx/sites/flask_mpconsole.conf
+++ b/Source/Server/conf/nginx/sites/flask_mpconsole.conf
@@ -13,7 +13,7 @@ server {
 
 server {
 
-	listen 443 ssl http2;
+	listen 443 ssl;
 	server_name _;
 
 	add_header X-Frame-Options "SAMEORIGIN";
@@ -29,8 +29,8 @@ server {
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS;
 
-	# Max 10gig upload
-	client_max_body_size 10G;
+	# Max 15gig upload
+	client_max_body_size 15G;
 
 	location / {
 		# checks for static files; if not found, proxy to app
